extern/PICM114GL/include/MNet_M1A.h

I16 PASCAL _mnet_m1a_group_tr_lineN_continuous( U16 RingNo, U16 GroupNo, I32 *DistArray, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_ta_lineN_continuous( U16 RingNo, U16 GroupNo, I32 *PosArray, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_sr_lineN_continuous( U16 RingNo, U16 GroupNo, I32 *DistArray, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_sa_lineN_continuous( U16 RingNo, U16 GroupNo, I32 *PosArray, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_tr_arc( U16 RingNo, U16 GroupNo, U16 AxIP, U16 AyIP, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, I16 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_ta_arc( U16 RingNo, U16 GroupNo, U16 AxIP, U16 AyIP, I32 Cx, I32 Cy, I32 Ex, I32 Ey, I16 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_sr_arc( U16 RingNo, U16 GroupNo, U16 AxIP, U16 AyIP, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, I16 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_sa_arc( U16 RingNo, U16 GroupNo, U16 AxIP, U16 AyIP, I32 Cx, I32 Cy, I32 Ex, I32 Ey, I16 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_tr_arc_continuous( U16 RingNo, U16 GroupNo, U16 AxIP, U16 AyIP, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, I16 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_ta_arc_continuous( U16 RingNo, U16 GroupNo, U16 AxIP, U16 AyIP, I32 Cx, I32 Cy, I32 Ex, I32 Ey, I16 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_sr_arc_continuous( U16 RingNo, U16 GroupNo, U16 AxIP, U16 AyIP, I32 OffsetCx, I32 OffsetCy, I32 OffsetEx, I32 OffsetEy, I16 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_sa_arc_continuous( U16 RingNo, U16 GroupNo, U16 AxIP, U16 AyIP, I32 Cx, I32 Cy, I32 Ex, I32 Ey, I16 Dir, U32 StrVel, U32 MaxVel, F32 Tacc, F32 Tdec );
I16 PASCAL _mnet_m1a_group_emg_stop( U16 RingNo, U16 GroupNo );
I16 PASCAL _mnet_m1a_group_sd_stop( U16 RingNo, U16 GroupNo );
//
// EEPROM
I16 PASCAL _mnet_m1a_get_hardware_info( U16 RingNo, U16 SlaveIP, U32* VendorID, U16* DeviceID );
I16 PASCAL _mnet_m1a_recovery_from_EEPROM( U16 RingNo, U16 SlaveIP );
I16 PASCAL _mnet_m1a_backup_to_EEPROM( U16 RingNo, U16 SlaveIP );