extern/PICM114GL/include/MNet_M1A.cs

            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_tr_lineN_continuous(ushort RingNo, ushort GroupNo, int[] DistArray, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_ta_lineN_continuous(ushort RingNo, ushort GroupNo, int[] PosArray, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_sr_lineN_continuous(ushort RingNo, ushort GroupNo, int[] DistArray, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_sa_lineN_continuous(ushort RingNo, ushort GroupNo, int[] PosArray, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_tr_arc(ushort RingNo, ushort GroupNo, ushort AxIP, ushort AyIP, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, short Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_ta_arc(ushort RingNo, ushort GroupNo, ushort AxIP, ushort AyIP, int Cx, int Cy, int Ex, int Ey, short Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_sr_arc(ushort RingNo, ushort GroupNo, ushort AxIP, ushort AyIP, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, short Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_sa_arc(ushort RingNo, ushort GroupNo, ushort AxIP, ushort AyIP, int Cx, int Cy, int Ex, int Ey, short Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_tr_arc_continuous(ushort RingNo, ushort GroupNo, ushort AxIP, ushort AyIP, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, short Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_ta_arc_continuous(ushort RingNo, ushort GroupNo, ushort AxIP, ushort AyIP, int Cx, int Cy, int Ex, int Ey, short Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_sr_arc_continuous(ushort RingNo, ushort GroupNo, ushort AxIP, ushort AyIP, int OffsetCx, int OffsetCy, int OffsetEx, int OffsetEy, short Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_sa_arc_continuous(ushort RingNo, ushort GroupNo, ushort AxIP, ushort AyIP, int Cx, int Cy, int Ex, int Ey, short Dir, uint StrVel, uint MaxVel, float Tacc, float Tdec);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_emg_stop(ushort RingNo, ushort GroupNo);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_group_sd_stop(ushort RingNo, ushort GroupNo);
            //
            // EEPROM
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_get_hardware_info(ushort RingNo, ushort SlaveIP, ref uint VendorID, ref ushort DeviceID);
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_recovery_from_EEPROM(ushort RingNo, ushort SlaveIP);
            //[DllImport(M1aName)]
            //public static extern short _mnet_m1a_backup_to_EEPROM(ushort RingNo, ushort SlaveIP);
            //
            //others
            [DllImport(M1aName)]
            public static extern short _mnet_m1a_check_error(ushort RingNo, ushort SlaveIP, ref int ErrorStatus);
            //

#if __ENGINEER__
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_write_asic_cmd(ushort RingNo, ushort SlaveIP, ushort Cmd);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_write_asic_reg_ushort(ushort RingNo, ushort SlaveIP, ushort RegIdx, ushort Low, ushort High);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_write_asic_reg_ulong(ushort RingNo, ushort SlaveIP, ushort RegIdx, uint Data);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_read_asic_reg_ushort(ushort RingNo, ushort SlaveIP, ushort RegIdx, ref ushort Low, ref ushort High);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_read_asic_reg_ulong(ushort RingNo, ushort SlaveIP, ushort RegIdx, ref uint Data);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_write_gpio(ushort RingNo, ushort SlaveIP, byte Value);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_read_gpio(ushort RingNo, ushort SlaveIP, ref byte Value);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_dump_registers(ushort RingNo, ushort SlaveIP);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_check_int(ushort RingNo, ushort SlaveIP, ref byte IntStatus);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_get_serr(ushort RingNo, ushort SlaveIP, ref uint ErrorStatus);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_get_sevt(ushort RingNo, ushort SlaveIP, ref uint EventStatus);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_set_int_factor(ushort RingNo, ushort SlaveIP, uint int_factor);
        [DllImport(DLLNAME)]
        public static extern short _mnet_m1a_get_EEPROM_data(ushort RingNo, ushort SlaveIP, ref ST_EEPROM eeprom);
#endif // __ENGINEER__
        }
    }

}
